# ELEC3042_AVR

./: .clang-format  .gitignore  CMakeLists.txt  ELEC3042_AVR.code-workspace  README.md  _CMakeLists.txt
.devcontainer/: devcontainer.json
scripts/: attachUsb.sh  detachUsb.sh
src/assessment_major/: CMakeLists.txt  adc.c  adc.h  bool.h  clock.c  clock.h  eeprom.c  eeprom.h  flag.h  fsm.c  fsm.h  iotypes.h  led.c  led.h  main.c  null.h  period.c  period.h  sensor.c  sensor.h  systemtimer.h  timerTask.c  timerTask.h  timers.h  types.h
src/assessment_major/drivers/i2c/display/: 22S1_ELEC3042_I2C_PCF8574.c
src/assessment_major/drivers/mcp23s17/: mcp23s17.c  mcp23s17.h
src/assessment_major/drivers/spi/: spi.c  spi.h
src/assessment_major/intersection/: intersection.c  intersection.h  light.c  light.h  trafficLight.c  trafficLight.h
src/assessment_minor/: CMakeLists.txt  adc.h  advancedButton.c  advancedButton.h  bool.h  button.c  button.h  clock.c  clock.h  display.h  eeprom.c  eeprom.h  eeprom_2.c  eeprom_2.h  eeprom_alarm.c  eeprom_alarm.h  eeprom_data.c  eeprom_data.h  flag.c  flag.h  fsm.c  fsm.h  iotypes.h  led.c  led.h  main.c  null.h  sevenSegmentDisplay.c  sevenSegmentDisplay.h  systemtimer.c  systemtimer.h  tickable.c  tickable.h  timemode.h  timerTask.c  timerTask.h  timers.h
src/assessment_minor/debug/: debug_display.c  debug_display.h
src/assignment_minor/: fsm.h  main.c
src/main/: CMakeLists.txt  main.c
src/spi/: CMakeLists.txt  MCP23S17.h  main.c
src/week3/: w3p1.c
src/week3/w3p1/: CMakeLists.txt  w3p1.c
src/week4/p1/: CMakeLists.txt  main.c
src/week4/p2/: CMakeLists.txt  main.c
src/week4/p3/: CMakeLists.txt  main.c
src/week5/i2c/: CMakeLists.txt  main.c
src/week5/p1/: 22S1_ELEC3042_I2C_PCF8574.c  22S1_ELEC3042_I2C_PCF8574.h  CMakeLists.txt  main.c
src/week5/p2/: 22S1_ELEC3042_L5P2_boppit.c  22S1_ELEC3042_SPI.c
